# RestFrames

./: .gitignore  AUTHORS  CNAME  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile_old  Makefile_static  NEWS  README  README.md  _config.yml  aclocal.m4  atom.xml  configure  configure.ac  doxygen.config  index.html  index.md  index_old.html  params.json  rootlogon.C  setup.sh  sitemap.xml  test_BW.C
RestFramesv1.0/: _combinatoric_group_8cc_source.html  _combinatoric_group_8hh_source.html  _combinatoric_jigsaw_8cc_source.html  _combinatoric_jigsaw_8hh_source.html  _combinatoric_state_8cc_source.html  _combinatoric_state_8hh_source.html  _contra_boost_invariant_jigsaw_8cc_source.html  _contra_boost_invariant_jigsaw_8hh_source.html  _decay_frame_8cc_source.html  _decay_frame_8hh_source.html  _frame_link_8cc_source.html  _frame_link_8hh_source.html  _frame_plot_8cc_source.html  _frame_plot_8hh_source.html  _g_decay_frame_8cc_source.html  _g_decay_frame_8hh_source.html  _g_frame_8cc_source.html  _g_frame_8hh_source.html  _g_invisible_frame_8cc_source.html  _g_invisible_frame_8hh_source.html  _g_lab_frame_8cc_source.html  _g_lab_frame_8hh_source.html  _g_visible_frame_8cc_source.html  _g_visible_frame_8hh_source.html  _group_8cc_source.html  _group_8hh_source.html  _group_list_8cc_source.html  _group_list_8hh_source.html  _invisible_frame_8cc_source.html  _invisible_frame_8hh_source.html  _invisible_group_8cc_source.html  _invisible_group_8hh_source.html  _invisible_jigsaw_8cc_source.html  _invisible_jigsaw_8hh_source.html  _invisible_mass_jigsaw_8cc_source.html  _invisible_mass_jigsaw_8hh_source.html  _invisible_rapidity_jigsaw_8cc_source.html  _invisible_rapidity_jigsaw_8hh_source.html  _invisible_state_8cc_source.html  _invisible_state_8hh_source.html  (+212 more)
RestFramesv1.0.0/: _combinatoric_group_8cc_source.html  _combinatoric_group_8hh_source.html  _combinatoric_jigsaw_8cc_source.html  _combinatoric_jigsaw_8hh_source.html  _combinatoric_state_8cc_source.html  _combinatoric_state_8hh_source.html  _contra_boost_invariant_jigsaw_8cc_source.html  _contra_boost_invariant_jigsaw_8hh_source.html  _decay_frame_8cc_source.html  _decay_frame_8hh_source.html  _frame_link_8cc_source.html  _frame_link_8hh_source.html  _frame_plot_8cc_source.html  _frame_plot_8hh_source.html  _g_decay_frame_8cc_source.html  _g_decay_frame_8hh_source.html  _g_frame_8cc_source.html  _g_frame_8hh_source.html  _g_invisible_frame_8cc_source.html  _g_invisible_frame_8hh_source.html  _g_lab_frame_8cc_source.html  _g_lab_frame_8hh_source.html  _g_visible_frame_8cc_source.html  _g_visible_frame_8hh_source.html  _group_8cc_source.html  _group_8hh_source.html  _group_list_8cc_source.html  _group_list_8hh_source.html  _invisible_frame_8cc_source.html  _invisible_frame_8hh_source.html  _invisible_group_8cc_source.html  _invisible_group_8hh_source.html  _invisible_jigsaw_8cc_source.html  _invisible_jigsaw_8hh_source.html  _invisible_mass_jigsaw_8cc_source.html  _invisible_mass_jigsaw_8hh_source.html  _invisible_rapidity_jigsaw_8cc_source.html  _invisible_rapidity_jigsaw_8hh_source.html  _invisible_state_8cc_source.html  _invisible_state_8hh_source.html  (+719 more)
_data/: footer.yml  messages.yml  navigation.yml
_includes/: INSTALL.md  analytics.html  disqus.html  favicon.html  footer.html  header.html  highlight.html  prettify.html  sidebar_ui_controller.html
_layouts/: article.html  barebones.html  category.html  category_index.html  default.html  dirindex.html  example.html  home.html  page.html  post.html
_sass/: _layout.scss  _variables.scss
examples/: Makefile.am  Makefile.in  example_01.C  example_01_basics_Ztoll.C  example_02.C  example_02_InvisibleJigsaws_Wtolnu.C  example_03.C  example_03_MultipleDecays_Toptoblnu.C  example_04.C  example_04_HtoWWto4l.C  example_05.C  example_05_DiToptoblnu.C  example_06_DiGluinostoJetsMET.C  example_07.C  example_DiGluino_to_bbXbbX.C  example_DiStop_to_bXp_bXm_to_blNblN.C  example_DiStop_to_hadtopXhadtopX.C  example_H_to_WlnuWlnu.C  example_H_to_hh_to_4Wlnu.C  example_H_to_ttbar_to_bWlnubWlnu.C  example_Hp_to_HggWlnu.C  example_N_Wlnu.C  example_WWW.C  example_Wlnu.C  example_X2X2_to_ZllXHggX.C  example_Zll.C  example_top_to_bWlnu.C  example_ttbar_to_bWlnubWlnu.C  index.html  index.md
examples/_posts/: 1000-1-1-ExampleHowTo.md  10000-1-1-test.md  2015-02-21-test.md
examples/tree_code/: RestFramesTree.C  RestFramesTree_C.d  example_01.C  example_01_C.d  example_02.C  example_02_C.d  example_03.C  example_03_C.d  example_04.C  example_04_C.d  example_05.C  example_05_C.d
inc/RestFrames/: CombinatoricGroup.hh  CombinatoricJigsaw.hh  CombinatoricState.hh  CombinedCBInvJigsaw.hh  ContraBoostInvJigsaw.hh  ContraBoostInvariantJigsaw.hh  DecayFrame.hh  DecayGenFrame.hh  DecayRecoFrame.hh  FrameLog.hh  FramePlot.hh  GDecayFrame.hh  GFrame.hh  GInvisibleFrame.hh  GLabFrame.hh  GVisibleFrame.hh  GeneratorFrame.hh  Group.hh  GroupList.hh  HistPlot.hh  HistPlotCategory.hh  HistPlotVar.hh  InvisibleFrame.hh  InvisibleGenFrame.hh  InvisibleGroup.hh  InvisibleJigsaw.hh  InvisibleMassJigsaw.hh  InvisibleRapidityJigsaw.hh  InvisibleRecoFrame.hh  InvisibleState.hh  Jigsaw.hh  JigsawList.hh  LabFrame.hh  LabGenFrame.hh  LabRecoFrame.hh  Makefile.am  Makefile.in  MaxProbBreitWignerCombJigsaw.hh  MaxProbBreitWignerInvJigsaw.hh  MinMassChi2CombJigsaw.hh  (+38 more)
src/: CombinatoricGroup.cc  CombinatoricJigsaw.cc  CombinatoricState.cc  CombinedCBInvJigsaw.cc  ContraBoostInvJigsaw.cc  ContraBoostInvariantJigsaw.cc  DecayFrame.cc  DecayGenFrame.cc  DecayRecoFrame.cc  FrameLink.cc  FrameLog.cc  FramePlot.cc  GDecayFrame.cc  GFrame.cc  GInvisibleFrame.cc  GLabFrame.cc  GVisibleFrame.cc  GeneratorFrame.cc  Group.cc  GroupList.cc  HistPlot.cc  HistPlotCategory.cc  HistPlotVar.cc  InvisibleFrame.cc  InvisibleGenFrame.cc  InvisibleGroup.cc  InvisibleJigsaw.cc  InvisibleMassJigsaw.cc  InvisibleRapidityJigsaw.cc  InvisibleRecoFrame.cc  InvisibleState.cc  Jigsaw.cc  JigsawList.cc  LabFrame.cc  LabGenFrame.cc  LabRecoFrame.cc  Makefile.am  Makefile.in  MaxProbBreitWignerCombJigsaw.cc  MaxProbBreitWignerInvJigsaw.cc  (+39 more)
(+2729 files in other folders)
