RestFramesincludedir=$(includedir)/RestFrames

RestFramesinclude_HEADERS = RestFrames_LinkDef.h RestFrames.hh RFBase.hh RFKey.hh RFList.hh RFLog.hh\
	FramePlot.hh RestFrame.hh ReconstructionFrame.hh GeneratorFrame.hh LabFrame.hh DecayFrame.hh\
	VisibleFrame.hh InvisibleFrame.hh LabRecoFrame.hh DecayRecoFrame.hh VisibleRecoFrame.hh\
	InvisibleRecoFrame.hh LabGenFrame.hh DecayGenFrame.hh VisibleGenFrame.hh InvisibleGenFrame.hh\
	ResonanceGenFrame.hh State.hh InvisibleState.hh CombinatoricState.hh Group.hh\
	InvisibleGroup.hh CombinatoricGroup.hh Jigsaw.hh InvisibleJigsaw.hh\
	CombinatoricJigsaw.hh InvisibleMassJigsaw.hh InvisibleRapidityJigsaw.hh\
	MinimizeMassesCombinatoricJigsaw.hh\
	ContraBoostInvariantJigsaw.hh SelfAssemblingRecoFrame.hh 
