RestFramesincludedir=$(includedir)/RestFrames

RestFramesinclude_HEADERS = RestFrames_LinkDef.h RestFrames.hh\
	RFBase.hh RFKey.hh RFList.hh RFLog.hh RFPlot.hh RFCharge.hh\
	TreePlot.hh TreePlotNode.hh TreePlotLink.hh\
	HistPlot.hh HistPlotVar.hh HistPlotCategory.hh\
	RestFrame.hh ReconstructionFrame.hh GeneratorFrame.hh\
	LabFrame.hh DecayFrame.hh VisibleFrame.hh InvisibleFrame.hh\
	LabRecoFrame.hh DecayRecoFrame.hh VisibleRecoFrame.hh InvisibleRecoFrame.hh\
	SelfAssemblingRecoFrame.hh\
	LabGenFrame.hh DecayGenFrame.hh VisibleGenFrame.hh InvisibleGenFrame.hh\
	ResonanceGenFrame.hh ppLabGenFrame.hh\
	State.hh VisibleState.hh InvisibleState.hh CombinatoricState.hh\
	Group.hh InvisibleGroup.hh CombinatoricGroup.hh\
	Jigsaw.hh InvisibleJigsaw.hh CombinatoricJigsaw.hh\
	SetMassInvJigsaw.hh SetRapidityInvJigsaw.hh ContraBoostInvJigsaw.hh\
	MinMassesCombJigsaw.hh MinMassesSqInvJigsaw.hh
